# wb-SolarView

./: .env.example  README.md  alembic.ini  pyproject.toml  pytest.ini  requirements.txt  run.py  setup.py
alembic/: env.py
scripts/: drop_tables.py  init_db.py
src/solar_api/: cli.py  main.py
src/solar_api/adapters/api/: auth_routes.py  dependencies.py  panel_routes.py  routes.py  user_routes.py
src/solar_api/adapters/pvgis/: pvgis_adapter.py
src/solar_api/adapters/repositories/: json_panel_repository.py  postgres_panel_repository.py  postgres_user_repository.py
src/solar_api/application/ports/: panel_repository.py  pvgis_service.py  user_repository.py
src/solar_api/application/services/: auth_service.py  panel_service.py  solar_service.py  user_service.py
src/solar_api/database/: __init__.py  config.py  initial_data.py  models.py
src/solar_api/domain/: models.py  panel_model.py  user_models.py
storage/: models.json
tests/: conftest.py  test_auth.py  test_calculations.py  test_panels.py  test_users.py  test_utils.py
