[project]
name = "wb-solarview"
version = "0.1.0"
description = "Web Service que irá receber requisições da interface mobile do SolarView e redirecionar para as APIs de Backend"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.116.1",
    "httpx>=0.28.1",
    "python-dotenv>=1.1.1",
    "uvicorn>=0.35.0",
]
